--- a/main.css
+++ b/main.css
@@ -10,18 +10,79 @@ body {
 
 .header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-between; /*Puts the same amount of space between everything*/
+  align-items: center; /*Centers everything horizontally*/
 }
 
 .header-text {
   font-size: 70px;
   font-weight: bold;
-  text-shadow: 4px 4px black;
+  text-shadow: 4px 4px black; /*Adds a bottom shadow to the text*/
   color: #db2473;
 }
 
 .cupido {
   width: 10%;
   height: auto;
+}
+
+.heart-area {
+  margin-bottom: 30px;
+}
+
+.heart {
+  width: 18%;
+  height: auto;
+  display: block; /*Centering the image horizontally*/
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.names-area {
+  display: flex;
+  justify-content: center; /*Puts everything next to eachother in the center of the screen*/
+  align-items: center;
+}
+
+.left-name {
+  border: 3px solid #db2473;
+  box-shadow: 2px 3px black; /*Adds a bottom shadow*/
+  width: 15%;
+  height: 40px;
+}
+
+.heart-and-text {
+  position: relative;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.test-heart {
+  width: 112px;
+  height: auto;
+}
+
+.heart-text {
+  position: absolute; /*The texts position is absolute to the DIV that it's in*/
+  font-size: 20px;
+  color: #ffd1f7;
+  text-shadow: 2px 2px black;
+  top: 35px;
+  left: 50%;
+  transform: translateX(
+    -50%
+  ); /*Transform combined with "left" stated above makes it be exactly in the middle*/
+}
+
+.right-name {
+  border: 3px solid #db2473;
+  box-shadow: 2px 3px black;
+  width: 15%;
+  height: 40px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
