--- a/main.css
+++ b/main.css
@@ -45,12 +45,18 @@ body {
 }
 
 #nameA {
-  background-color: yellow;
+  background-color: #ffd1f7;
+  border: 3px solid #db2473;
+  box-shadow: 2px 3px black; /*Adds a bottom shadow*/
+  width: 100%;
+  height: 100%;
+  padding-left: 5%;
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
+  color: #db2473;
 }
 
 .left-name {
-  border: 3px solid #db2473;
-  box-shadow: 2px 3px black; /*Adds a bottom shadow*/
   width: 15%;
   height: 40px;
 }
@@ -79,10 +85,20 @@ body {
 }
 
 .right-name {
-  border: 3px solid #db2473;
-  box-shadow: 2px 3px black;
   width: 15%;
   height: 40px;
+}
+
+#nameB {
+  background-color: #ffd1f7;
+  border: 3px solid #db2473;
+  box-shadow: 2px 3px black; /*Adds a bottom shadow*/
+  width: 100%;
+  height: 100%;
+  padding-left: 5%;
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
+  color: #db2473;
 }
 
 .footer {
